fix(PoweredBy): add missing margin between text and Algolia logo (algolia/instantsearch-specs#127)

--- a/packages/instantsearch-specs/src/styles/themes/algolia.scss
+++ b/packages/instantsearch-specs/src/styles/themes/algolia.scss
@@ -461,10 +461,6 @@ a[class^='ais-'] {
   font-size: 0.8rem;
 }
 
-.ais-PoweredBy-logo {
-  margin-left: 0.3rem;
-}
-
 .ais-RangeSlider {
   .rheostat-progress {
     background-color: $east-bay;
